# volcano

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  docker-compose.yml  environment.yml  fill_files.sh  fill_remaining_files.sh  publish.sh  pyproject.toml  requirements.txt  run_volcano.py  setup.py
archive/json_backups/: Etna_20260205_124117.json
config/: default_config.yaml  parameter_weights.yaml  thresholds.yaml  volcano_list.yaml
docs/: api_reference.md  methodology.md  physics_background.md  user_guide.md
docs/case_studies/: agung_2017.md  etna_2001.md  eyjafjallajokull_2010.md  pinatubo_1991.md
examples/: basic_usage.py  custom_volcano.py  eruption_forecast.py  parameter_calculation.py
notebooks/: 01_data_exploration.ipynb  02_parameter_calculation.ipynb  03_mogi_modeling.ipynb  04_lyapunov_analysis.ipynb  05_integration_framework.ipynb  06_validation.ipynb  07_case_studies.ipynb
scripts/: batch_processing.py  download_data.py  generate_report.py  real_time_monitor.py  train_classifier.py
src/: __init__.py
src/analysis/: __init__.py  classification.py  sensitivity.py  time_series_analysis.py  validation.py
src/integration/: __init__.py  eruption_probability.py  state_vector.py  threshold_detection.py  vuap.py
src/models/: __init__.py  elastic_halfspace.py  gas_solubility.py  mogi.py  okada.py  thermal_models.py
src/parameters/: __init__.py  deformation.py  electrokinetic.py  gas_flux.py  heat.py  lyapunov.py  pressure.py  resistivity.py  seismic_pulse.py  water_flow.py
src/preprocessing/: __init__.py  gas_processing.py  gps_processing.py  insar_processing.py  seismic_processing.py  standardization.py
src/utils/: __init__.py  config.py  io.py  logging_utils.py  math_utils.py
src/visualization/: __init__.py  dashboard.py  parameter_plots.py  report_generator.py  state_space_plots.py
tests/: __init__.py  test_integration.py  test_models.py  test_parameters.py  test_preprocessing.py  test_validation.py
