[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volcano-monitoring"
version = "1.0.0"
description = "🌋 Multi-parameter volcanic unrest monitoring and eruption forecasting framework"
readme = "README.md"
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"}
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
requires-python = ">=3.8"
keywords = [
    "volcano",
    "monitoring",
    "eruption",
    "forecasting",
    "geophysics",
    "seismic",
    "deformation",
    "gas-flux",
    "early-warning",
    "hazard-assessment",
    "real-time",
    "physics-based",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "obspy>=1.2.0",
    "pyrocko>=2021.09.0",
    "scikit-learn>=0.24.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
full = [
    "tensorflow>=2.6.0",
    "plotly>=5.3.0",
    "bokeh>=2.4.0",
    "cartopy>=0.19.0",
    "netCDF4>=1.5.0",
    "h5py>=3.3.0",
]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
]
dashboard = [
    "dash>=2.4.0",
    "plotly>=5.3.0",
    "streamlit>=1.12.0",
]

[project.urls]
Homepage = "https://gitlab.com/gitdeeper3/volcano"
Repository = "https://gitlab.com/gitdeeper3/volcano.git"
Documentation = "https://gitlab.com/gitdeeper3/volcano/-/wikis/home"
Issues = "https://gitlab.com/gitdeeper3/volcano/-/issues"
Citation = "https://doi.org/"

[project.scripts]
volcano-monitor = "src.integration.vuap:main"
volcano-report = "scripts.generate_report:main"
volcano-dashboard = "src.visualization.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
